--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Dashboard</h1>
+<table>
+<tr>
+  <td>
+    <h3>Products Count:</h2>
+  </td>
+  <td>
+    <h3><%=@num_of_products%></h2>
+  </td>
+  </tr>
+  <tr>
+    <td>
+      <h3>Categories Count:</h2>
+  </td>
+    <td>
+      <h3><%=@num_of_categories%></h2>
+  </td> 
+    </tr>
