--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,22 @@
 </head>
 <body>
 
+<% if current_user %>
+  Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+<% else %>
+  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
+
+	
+	<% if notice %>
+      <%= notice %>
+	<% end %>
+	
+	<% if alert %>
+      <%= alert %>
+	<% end %>
+	
+
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
